--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "solution.js",
   "scripts": {
     "start": "node solution",
-    "test": "jest",
-    "test1": "solution < input.txt"
+    "test": "jest"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^27.5.1"
+  }
 }
